--- a/tools/glazres/languages/glazres.zh_CN.po
+++ b/tools/glazres/languages/glazres.zh_CN.po
@@ -2,77 +2,74 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-06-25 22:13+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: glazresmain.cbtncancel
-#, fuzzy
-#| msgid "Cancel"
 msgid "Close"
-msgstr "取消"
+msgstr "关闭"
 
 #: glazresmain.defilter
 msgctxt "glazresmain.defilter"
 msgid "Lazarus Resource Files|*.lrs|All Files|*"
-msgstr "Lazarus资源文件|*.lrs|所有文件|*"
+msgstr "Lazarus 资源文件|*.lrs|所有文件|*"
 
 #: glazresmain.desaveresourcefileas
 msgctxt "glazresmain.desaveresourcefileas"
 msgid "Save resourcefile as"
-msgstr "保持资源文件为"
+msgstr "保存资源文件为"
 
 #: glazresmain.errconverttotext
 #, object-pascal-format
 msgid "ERROR: unable to convert Delphi form to text: \"%s\""
-msgstr "错误:不能转换Delphi窗体(form)为文本:\"%s\""
+msgstr "错误：无法将 Delphi 窗体 转换为文本：“%s”"
 
 #: glazresmain.errcreate
 #, object-pascal-format
 msgid "ERROR: Cannot create \"%s\""
-msgstr "错误:不能创建\"%s\""
+msgstr "错误：无法创建 \"%s\""
 
 #: glazresmain.errfileisresource
 #, object-pascal-format
 msgid "ERROR: Cannot add resource file to itself (\"%s\")"
-msgstr "错误:不能添加资源文件到它自身(\"%s\")"
+msgstr "错误：不能将资源文件添加到自身（“%s”）"
 
 #: glazresmain.errfilenotfound
 #, object-pascal-format
 msgid "ERROR: File not found: \"%s\""
-msgstr "错误:文件未找到:\"%s\""
+msgstr "错误：文件未找到：“%s”"
 
 #: glazresmain.errnoresourcename
 #, object-pascal-format
 msgid "ERROR: No resourcename found for \"%s\""
-msgstr "错误:没有资源名称找到对于\"%s\""
+msgstr "错误：未找到资源名 \"%s\""
 
 #: glazresmain.errread
 #, object-pascal-format
 msgid "ERROR: Cannot read from \"%s\""
-msgstr "错误:不能读取从\"%s\""
+msgstr "错误：无法从 \"%s\" 读取"
 
 #: glazresmain.msgcreatinglrs
 #, object-pascal-format
 msgid "Creating \"%s\""
-msgstr "创建\"%s\""
+msgstr "创建中 \"%s\""
 
 #: glazresmain.msgprocessing
 #, object-pascal-format
 msgid "Processing \"%s\""
-msgstr "处理(Processing)\"%s\""
+msgstr "处理中 \"%s\""
 
 #: glazresmain.msgresourcenametype
-#, object-pascal-format, fuzzy
-#| msgid " Resource name = \"%s\", Type = \"%s\""
+#, object-pascal-format
 msgid "Resource name = \"%s\", Type = \"%s\""
-msgstr "资源名称= \"%s\",类型= \"%s\""
+msgstr "资源名称 = \"%s\"，类型 = \"%s\""
 
 #: glazresmain.msgsuccess
 #, object-pascal-format
@@ -81,23 +78,21 @@ msgid ""
 "Number of resources added: %d."
 msgstr ""
 "完成.\n"
-"添加的资源数量(Number of resources added):%d."
+"添加的资源数量：%d。"
 
 #: glazresmain.msgwrongext
 msgid "Filename does not have the required extension: fix it?"
-msgstr "文件名称没有需要的扩展名:修复它?"
+msgstr "文件名没有所需扩展名：是否修正？"
 
 #: glazresmain.odopenexistingfile
 msgctxt "glazresmain.odopenexistingfile"
 msgid "Open existing file"
-msgstr "打开存在的文件"
+msgstr "打开现有文件"
 
 #: glazresmain.opdfilter
-#, fuzzy
-#| msgid "Graphic (*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga)|*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga|Portable Network Graphic (*.png)|*.png|Pixmap (*.xpm)|*.xpm|Bitmaps (*.bmp)|*.bmp|Cursor (*.cur)|*.cur|Icon (*.ico)|*.ico|Mac OS X Icon (*.icns)|*.icns|Joint Picture Expert Group (*.jpeg;*.jpg;*.jpe;*.jfif)|*.jpeg;*.jpg;*.jpe;*.jfif|Tagged Image File Format (*.tif;*.tiff)|*.tif;*.tiff|Graphics Interchange Format (*.gif)|*.gif|Portable PixMap (*.pbm;*.pgm;*.ppm)|*.pbm;*.pgm;*.ppm|Animated GIF (*.gif)|*.gif|TGA Image File (*.tga)|*.tga|"
 msgctxt "glazresmain.opdfilter"
 msgid "Graphic (*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga)|*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga|Portable Network Graphic (*.png)|*.png|Pixmap (*.xpm)|*.xpm|Bitmaps (*.bmp)|*.bmp|Cursor (*.cur)|*.cur|Icon (*.ico)|*.ico|macOS Icon (*.icns)|*.icns|Joint Picture Expert Group (*.jpeg;*.jpg;*.jpe;*.jfif)|*.jpeg;*.jpg;*.jpe;*.jfif|Tagged Image File Format (*.tif;*.tiff)|*.tif;*.tiff|Graphics Interchange Format (*.gif)|*.gif|Portable PixMap (*.pbm;*.pgm;*.ppm)|*.pbm;*.pgm;*.ppm|Animated GIF (*.gif)|*.gif|TGA Image File (*.tga)|*.tga|"
-msgstr "图形(*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga)|*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga|便携式网络图形(*.png)|*.png|像素图(*.xpm)|*.xpm|位图(*.bmp)|*.bmp|Cursor (*.cur)|*.cur|图标(*.ico)|*.ico|Mac OS X图标 (*.icns)|*.icns|联合图片专家组(*.jpeg;*.jpg;*.jpe;*.jfif)|*.jpeg;*.jpg;*.jpe;*.jfif|标记图像文件格式(*.tif;*.tiff)|*.tif;*.tiff|图形交换格式 (*.gif)|*.gif|便携式像素图(*.pbm;*.pgm;*.ppm)|*.pbm;*.pgm;*.ppm|动画GIF(*.gif)|*.gif|TGA图像文件(*.tga)|*.tga|"
+msgstr "图像 (*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga)|*.png;*.xpm;*.bmp;*.cur;*.ico;*.icns;*.jpeg;*.jpg;*.jpe;*.jfif;*.tif;*.tiff;*.gif;*.pbm;*.pgm;*.ppm;*.gif;*.tga|便携式网络图形 (*.png)|*.png|像素图 (*.xpm)|*.xpm|位图 (*.bmp)|*.bmp|光标 (*.cur)|*.cur|图标 (*.ico)|*.ico|macOS 图标 (*.icns)|*.icns|联合图片专家组 (*.jpeg;*.jpg;*.jpe;*.jfif)|*.jpeg;*.jpg;*.jpe;*.jfif|标签图像文件格式 (*.tif;*.tiff)|*.tif;*.tiff|图形交换格式 (*.gif)|*.gif|便携式像素图 (*.pbm;*.pgm;*.ppm)|*.pbm;*.pgm;*.ppm|动画 GIF (*.gif)|*.gif|TGA 图像文件 (*.tga)|*.tga|"
 
 #: glazresmain.opdfilterall
 msgid "All files"
@@ -111,35 +106,33 @@ msgstr "打开存在的图片"
 #: tglazresform.addanybtn.caption
 msgctxt "tglazresform.addanybtn.caption"
 msgid "Add files"
-msgstr ""
+msgstr "添加文件"
 
 #: tglazresform.addanybtn.hint
 msgid "Add (any kind of) files to the list"
-msgstr "添加(任何种类)文件到列表"
+msgstr "将 (任何类型的) 文件添加到列表中"
 
 #: tglazresform.addimgbtn.caption
 msgctxt "tglazresform.addimgbtn.caption"
 msgid "Add images"
-msgstr ""
+msgstr "添加图片"
 
 #: tglazresform.addimgbtn.hint
 msgid "Add images to the list"
-msgstr "添加图像到列表"
+msgstr "添加图片到列表"
 
 #: tglazresform.caption
 msgid "LRS Builder"
-msgstr "LRS构建器(Builder)"
+msgstr "LRS 构建器"
 
 #: tglazresform.clearbtn.caption
 msgctxt "tglazresform.clearbtn.caption"
 msgid "Delete all"
-msgstr ""
+msgstr "删除所有"
 
 #: tglazresform.clearbtn.hint
-#, fuzzy
-#| msgid "Cleare the entire list"
 msgid "Clear the entire list"
-msgstr "清理该整个列表"
+msgstr "清除整个列表"
 
 #: tglazresform.closebtn.hint
 msgid "Exit the program"
@@ -148,7 +141,7 @@ msgstr "退出程序"
 #: tglazresform.deletebtn.caption
 msgctxt "tglazresform.deletebtn.caption"
 msgid "Delete selected"
-msgstr ""
+msgstr "删除选中项"
 
 #: tglazresform.deletebtn.hint
 msgid "Delete selected files from the list"
@@ -156,24 +149,22 @@ msgstr "删除选择的文件从列表"
 
 #: tglazresform.fileslabel.caption
 msgid "Files to include"
-msgstr "文件予以包含(include)"
+msgstr "包含的文件"
 
 #: tglazresform.lrslabel.caption
 msgid "Lazarus Resource Filename"
-msgstr "Lazarus资源文件名称"
+msgstr "Lazarus 资源文件名称"
 
 #: tglazresform.messageslabel.caption
 msgid "Messages"
 msgstr "信息"
 
 #: tglazresform.startbtn.caption
-#, fuzzy
-#| msgid "Create LRS"
 msgctxt "tglazresform.startbtn.caption"
 msgid "Create"
-msgstr "创建LRS"
+msgstr "创建"
 
 #: tglazresform.startbtn.hint
 msgid "Create the output LRS file"
-msgstr "创建输出LRS文件"
+msgstr "创建输出的 LRS 文件"
 
