--- a/components/chmhelp/packages/idehelp/languages/lazchmhelp.zh_CN.po
+++ b/components/chmhelp/packages/idehelp/languages/lazchmhelp.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-06-25 22:43+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: lazchmhelp.help_category_idecmd
@@ -26,10 +26,10 @@ msgstr "帮助(&H)"
 
 #: lazchmhelp.help_missinglhelp
 msgid "Missing lhelp"
-msgstr "丢失lhelp"
+msgstr "缺少 lhelp"
 
 #: lazchmhelp.help_unabletofindthelhelpviewerpleasecompilethelhelppro
 #, object-pascal-format
 msgid "Unable to find the lhelp viewer:%s%s%sPlease compile the lhelp project:%s%s"
-msgstr "不能找到lhelp查看器:%s%s%s请编译lhelp工程:%s%s"
+msgstr "无法找到 lhelp 查看器:%s%s%s请编译 lhelp 项目:%s%s"
 
