--- a/examples/codepageconverter/languages/lazconverter.zh_CN.po
+++ b/examples/codepageconverter/languages/lazconverter.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-06-25 22:30+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: tlazconverterform.button1.caption
@@ -27,23 +27,23 @@ msgstr "转换"
 #: tlazconverterform.caption
 msgctxt "TLAZCONVERTERFORM.CAPTION"
 msgid "Codepage LazConverter for PAS, LFM, LRS, LRT & INC files v0.0.6"
-msgstr "Codepage LazConverter对于PAS, LFM, LRS, LRT & INC文件v0.0.6"
+msgstr "用于 PAS、LFM、LRS、LRT、INC 文件的 Codepage LazConverter v0.0.6"
 
 #: tlazconverterform.label1.caption
 msgid "Path to your project:"
-msgstr "路径到您的工程:"
+msgstr "你的项目路径："
 
 #: tlazconverterform.label2.caption
 msgid "Convert From:"
-msgstr "转换从:"
+msgstr "转换自:"
 
 #: tlazconverterform.label3.caption
 msgid "Convert To:"
-msgstr "转换到:"
+msgstr "转换为:"
 
 #: tlazconverterform.label6.caption
 msgid "Ready..."
-msgstr "读取..."
+msgstr "准备就绪 ..."
 
 #: tlazconverterform.menuitem1.caption
 msgid "Remove from conversion"
