--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
@@ -1,14 +1,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
+"PO-Revision-Date: 2025-06-25 22:20+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: TyPoEditor 0.2\n"
 
 #: ideutilspkgstrconsts.lisafilealreadyexistsreplaceit
 #, object-pascal-format
 msgid "A file \"%s\" already exists.%sReplace it?"
-msgstr "该文件\"%s\"已经存在.%s替换它?"
+msgstr "文件 \"%s\" 已存在。%s是否替换？"
 
 #: ideutilspkgstrconsts.lisccoerrorcaption
 msgid "Error"
@@ -33,17 +36,17 @@ msgstr "目录未找到"
 #: ideutilspkgstrconsts.liserrorloadingfrom
 #, object-pascal-format
 msgid "Error loading %s from%s%s%s%s"
-msgstr "加载%s从%s%s%s%s错误"
+msgstr "加载%s错误，从%s%s%s%s"
 
 #: ideutilspkgstrconsts.liserrorsavingto
 #, object-pascal-format
 msgid "Error saving %s to%s%s%s%s"
-msgstr "错误 保存%s到%s%s%s%s"
+msgstr "保存 %s 错误，到 %s%s%s%s"
 
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
-msgstr "文件\"%s\"%s看起来不是一个文本文件.%s仍然打开它?"
+msgstr "文件 \"%s\"%s 看起来不是一个文本文件。%s仍然打开它?"
 
 #: ideutilspkgstrconsts.lisfileisnotwritable
 msgid "File is not writable"
@@ -68,7 +71,7 @@ msgstr "没有implemented"
 #: ideutilspkgstrconsts.lisnotimplementedyet
 #, object-pascal-format
 msgid "Not implemented yet:%s%s"
-msgstr "还没有implemented:%s%s"
+msgstr "尚未实现：%s%s"
 
 #: ideutilspkgstrconsts.lisopensymlink
 msgid "Open symlink"
