--- a/tools/jsonviewer/languages/jsonviewer.zh_CN.po
+++ b/tools/jsonviewer/languages/jsonviewer.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-06-25 22:05+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: msgjsonviewer.sarray
@@ -39,16 +39,13 @@ msgid "JSON document modified"
 msgstr "JSON文件已修改"
 
 #: msgjsonviewer.sdocumentmodifiedaction
-#, object-pascal-format, fuzzy, badformat
-#| msgid ""
-#| "The JSON data was changed but not saved.\n"
-#| "What do want to do ?\n"
+#, object-pascal-format
 msgid ""
 "The JSON data in \"%s\" was changed but not saved.\n"
 "What do want to do ?"
 msgstr ""
-"JSON数据被更改 但是没有保存.\n"
-"你想做什么?\n"
+"JSON 数据在 \"%s\" 中已更改 但未保存。\n"
+"您想做什么？"
 
 #: msgjsonviewer.sduplicatemembername
 #, object-pascal-format
@@ -57,7 +54,7 @@ msgstr "复制成员名\"%s\"."
 
 #: msgjsonviewer.sefilenameneeded
 msgid "Filename needed for generated code"
-msgstr ""
+msgstr "生成代码需要文件名"
 
 #: msgjsonviewer.selement
 #, object-pascal-format
@@ -110,108 +107,106 @@ msgstr "保存更改"
 
 #: msgjsonviewer.stabcaptionraw
 msgid "Raw"
-msgstr ""
+msgstr "原始"
 
 #: msgjsonviewer.stabcaptionvisual
 msgid "Visual"
-msgstr ""
+msgstr "视觉"
 
 #: tauthenticationform.caption
 msgid "HTTP Authentication"
-msgstr ""
+msgstr "HTTP 身份验证"
 
 #: tauthenticationform.lcbusername.caption
 msgid "&Username"
-msgstr ""
+msgstr "用户名(&U)"
 
 #: tauthenticationform.lepassword.caption
 msgid "&Password"
-msgstr ""
+msgstr "密码(&P)"
 
 #: tcreatecodeform.caption
 msgctxt "tcreatecodeform.caption"
 msgid "Create pascal code"
-msgstr ""
+msgstr "创建 pascal 代码"
 
 #: tcreatecodeform.cgoptions.caption
 msgid "Other options"
-msgstr ""
+msgstr "其他选项"
 
 #: tcreatecodeform.eextraunitnames.texthint
 msgid "Unit names, separated by commas"
-msgstr ""
+msgstr "单元名称，用逗号分隔"
 
 #: tcreatecodeform.leconstructorargslabel1.caption
 msgid "Constructor arguments"
-msgstr ""
+msgstr "构造函数参数"
 
 #: tcreatecodeform.lepropertytypesuffix.caption
 msgid "Property type suffix"
-msgstr ""
+msgstr "属性类型后缀"
 
 #: tcreatecodeform.letoplevelclassname.caption
 msgid "Toplevel class name"
-msgstr ""
+msgstr "顶级类名"
 
 #: tcreatecodeform.leunitname.caption
 msgid "Unit name"
-msgstr ""
+msgstr "单元名称"
 
 #: tcreatecodeform.leunitname1.caption
 msgid "Field Prefix"
-msgstr ""
+msgstr "字段前缀"
 
 #: tcreatecodeform.lextraunitnames.caption
 msgid "Extra units in uses"
-msgstr ""
+msgstr "额外的单元在 uses"
 
 #: tcreatecodeform.lfecode.caption
 msgid "File"
-msgstr ""
+msgstr "文件"
 
 #: tcreatecodeform.lparentname.caption
 msgid "Object Parent class"
-msgstr ""
+msgstr "对象父类"
 
 #: tcreatecodeform.lseindent.caption
 msgid "Indent"
-msgstr ""
+msgstr "缩进"
 
 #: tcreatecodeform.tscode.caption
 msgid "Preview"
-msgstr ""
+msgstr "预览"
 
 #: tcreatecodeform.tsoptions.caption
 msgid "Options"
-msgstr ""
+msgstr "选项"
 
 #: theaderform.caption
 msgid "Request header"
-msgstr ""
+msgstr "请求头"
 
 #: theaderform.lcbname.caption
-#, fuzzy
 msgctxt "theaderform.lcbname.caption"
 msgid "&Name"
 msgstr "名称(&N)"
 
 #: theaderform.lcbvalue.caption
-#, fuzzy
 msgctxt "theaderform.lcbvalue.caption"
 msgid "&Value"
 msgstr "值(&V)"
 
 #: tmainform.aaddtofavourites.caption
 msgid "Add request to favourites"
-msgstr ""
+msgstr "将请求添加到收藏夹"
 
 #: tmainform.aclose.caption
 msgid "&Close"
-msgstr ""
+msgstr "关闭(&C)"
 
 #: tmainform.aclose.hint
 msgid "Close file"
-msgstr ""
+msgstr "关闭文件"
 
 #: tmainform.acopy.caption
 msgid "&Copy"
@@ -224,12 +219,12 @@ msgstr "复制选择的节点到剪贴板作为JSON"
 #: tmainform.acreatecode.caption
 msgctxt "tmainform.acreatecode.caption"
 msgid "Create Pascal code"
-msgstr ""
+msgstr "创建 Pascal 代码"
 
 #: tmainform.acreatecode.hint
 msgctxt "tmainform.acreatecode.hint"
 msgid "Create Pascal code"
-msgstr ""
+msgstr "创建 Pascal 代码"
 
 #: tmainform.acut.caption
 msgid "C&ut"
@@ -269,7 +264,7 @@ msgstr "查找(&F)"
 
 #: tmainform.afind.hint
 msgid "Find"
-msgstr ""
+msgstr "查找"
 
 #: tmainform.afindnext.caption
 msgid "Find &next occurrence"
@@ -277,7 +272,7 @@ msgstr "查找下一个事件(&)"
 
 #: tmainform.afindnext.hint
 msgid "Find next"
-msgstr ""
+msgstr "查找下一个(&N)"
 
 #: tmainform.anew.caption
 msgid "&New"
@@ -394,7 +389,7 @@ msgstr "编辑(&E)"
 
 #: tmainform.mfavourites.caption
 msgid "Favourites"
-msgstr ""
+msgstr "收藏夹"
 
 #: tmainform.mfile.caption
 msgid "&File"
@@ -427,11 +422,11 @@ msgstr "引用字符串值"
 
 #: tmainform.misaveformatted.caption
 msgid "Save Formatted JSON"
-msgstr ""
+msgstr "保存格式化 JSON"
 
 #: tmainform.mishowrest.caption
 msgid "Show REST panel"
-msgstr ""
+msgstr "显示 REST 面板"
 
 #: tmainform.misortmembers.caption
 msgid "Sort object members"
@@ -459,7 +454,7 @@ msgstr "TBJSON"
 
 #: tmainform.tbshowrest.caption
 msgid "Show &REST query"
-msgstr ""
+msgstr "显示 REST(&R) 查询"
 
 #: tmainform.toolbutton1.caption
 msgid "ToolButton1"
@@ -515,84 +510,84 @@ msgstr "值(&V)"
 #: trestframe.aaddheader.caption
 msgctxt "trestframe.aaddheader.caption"
 msgid "Add Header"
-msgstr ""
+msgstr "添加头文件"
 
 #: trestframe.aaddheader.hint
 msgctxt "trestframe.aaddheader.hint"
 msgid "Add Header"
-msgstr ""
+msgstr "添加标题"
 
 #: trestframe.aaddtofavourites.caption
 msgid "Add to favourites..."
-msgstr ""
+msgstr "添加到收藏夹 ..."
 
 #: trestframe.aauthentication.caption
 msgctxt "trestframe.aauthentication.caption"
 msgid "HTTP Basic authentication"
-msgstr ""
+msgstr "HTTP 基本认证"
 
 #: trestframe.aauthentication.hint
 msgctxt "trestframe.aauthentication.hint"
 msgid "HTTP Basic authentication"
-msgstr ""
+msgstr "HTTP 基本认证"
 
 #: trestframe.adeleteheader.caption
 msgctxt "trestframe.adeleteheader.caption"
 msgid "Delete Header"
-msgstr ""
+msgstr "删除 Header"
 
 #: trestframe.adeleteheader.hint
 msgctxt "trestframe.adeleteheader.hint"
 msgid "Delete Header"
-msgstr ""
+msgstr "删除头"
 
 #: trestframe.aeditheader.caption
 msgctxt "trestframe.aeditheader.caption"
 msgid "Edit Header"
-msgstr ""
+msgstr "编辑头文件(&H)"
 
 #: trestframe.aeditheader.hint
 msgctxt "trestframe.aeditheader.hint"
 msgid "Edit Header"
-msgstr ""
+msgstr "编辑头文件"
 
 #: trestframe.asend.caption
 msgid "&Send"
-msgstr ""
+msgstr "发送(&S)"
 
 #: trestframe.asend.hint
 msgid "Send request"
-msgstr ""
+msgstr "发送请求"
 
 #: trestframe.cbusecurrenttabcontent.caption
 msgid "Use current tab as content"
-msgstr ""
+msgstr "使用当前标签作为内容"
 
 #: trestframe.lhttpstatus.caption
 msgid "HTTP"
-msgstr ""
+msgstr "HTTP"
 
 #: trestframe.tsheaders.caption
 msgid "Request headers"
-msgstr ""
+msgstr "请求头"
 
 #: trestframe.tsrequestcontent.caption
 msgid "Request content"
-msgstr ""
+msgstr "请求内容"
 
 #: trestframe.tsresult.caption
 msgid "Request result"
-msgstr ""
+msgstr "请求结果"
 
 #: tsaverequestdataform.caption
 msgid "Save request data as favourite"
-msgstr ""
+msgstr "保存请求数据为收藏"
 
 #: tsaverequestdataform.cbsavecontent.caption
 msgid "Save request content"
-msgstr ""
+msgstr "保存请求内容"
 
 #: tsaverequestdataform.label1.caption
 msgid "Name"
-msgstr ""
+msgstr "名称"
 
